force-app/main/default/objects/Rest_API_Call__c/Rest_API_Call__c.object-meta.xml
<CustomObject>
    <label>inwise Rest API Call</label>
    <nameField>
        <displayFormat>RAC-{0000}</displayFormat>
        <label>RAC No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Rest API Call</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>