force-app/main/default/objects/Rest_API_Call__c/fields/Call_Index__c.field-meta.xml
<CustomField>
    <fullName>Call_Index__c</fullName>
    <label>Call Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>