force-app/main/default/objects/Rest_API_Call__c/fields/Members_Action__c.field-meta.xml
<CustomField>
    <fullName>Members_Action__c</fullName>
    <label>inwise Members Action</label>
    <referenceTo>Members_Action__c</referenceTo>
    <relationshipLabel>inwise Rest API Call</relationshipLabel>
    <relationshipName>inwise_Rest_API_Call</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>